--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -2,36 +2,42 @@ name: golang-pipeline
 
 on:
   push:
-    # Срабатывает на любой push (для тестов)
-    branches:
-      - main
-    # Отдельно отслеживаются теги (для деплоя)
     tags:
-      - 'v*'
+      - '*'  # Для деплоя при теге
+    branches:
+      - '**' # Для тестов при любом пуше
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    container: golang:1.23.0
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: Set up dependencies
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up Go 1.23
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.23'
+
+      - name: Install dependencies
         run: go mod tidy
 
-      - name: Run tests
+      - name: Run Unit Tests
         run: go test ./...
 
-      - name: Run go vet
+      - name: Vet
         run: go vet ./...
 
   deploy:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: test
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags')
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -42,13 +48,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-      - name: Extract metadata
+      - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: adam8965/final-12-sprint
+          images: adam8965/hello-golang
 
-      - name: Build and push
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
